<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tw_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:gravity="center"
        tools:text="@string/question_paris" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bouton_vrai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouton_vrai" />

        <Button
            android:id="@+id/bouton_faux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouton_faux" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_triche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_triche" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_precedent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouton_precedent"
            android:drawableStart="@drawable/fleche_gauche"
            android:drawablePadding="4dp" />

        <Button
            android:id="@+id/btn_suivant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouton_suivant"
            android:drawableEnd="@drawable/fleche_droite"
            android:drawablePadding="4dp" />

    </LinearLayout>

</LinearLayout>